crates/vihaco-parser/tests/compile_errors/legacy_with_nested_syntax_class.rs
// SPDX-FileCopyrightText: 2026 The vihaco Authors
// SPDX-License-Identifier: MIT

use vihaco_parser::Parse;

#[derive(Parse)]
#[head]
enum Value {
    #[syntax_class(value)]
    Number(i64),
}

fn main() {}
